# native-timer

./: CHANGELOG.md  Cargo.toml  README.md
docs/: Timer.md  TimerQueue.md  TimerQueue_fire_oneshot.md  TimerQueue_schedule_oneshot.md  TimerQueue_schedule_timer.md
src/: common.rs  lib.rs  timer.rs  unix.rs  windows.rs
src/examples/: simple.rs  test_onshot.rs
src/unix/: mod.rs  waitable_objects.rs
src/windows/: mod.rs  waitable_objects.rs
