[package]
name = "native-timer"
authors = ["Ruxo Zheng <rz@just.sent.as>"]
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "Timer library which uses OS timer capabilities."
keywords = ["native", "timer"]

[dependencies]

[target.'cfg(windows)'.dependencies.windows]
version = "0.44"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_WindowsProgramming"
]