[package]
name = "native-timer"
authors = ["Ruxo Zheng <me@ruxoz.net>"]
version = "0.3.0"
edition = "2021"

description = "Timer library which uses OS timer capabilities."
license = "MIT"
readme = "README.md"
homepage = "https://docs.rs/native-timer"
documentation = "https://docs.rs/native-timer"
repository = "https://github.com/ruxo/native-timer"
keywords = ["native", "timer", "schedule"]
categories = ["concurrency", "os::windows-apis"]

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.44"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_WindowsProgramming"
]

[[example]]
name = "simple"
path = "src/examples/simple.rs"
